feat: introduce shot history functionality with a dedicated modal and comprehensive UI styling updates.

--- a/index.html
+++ b/index.html
@@ -232,6 +232,16 @@
         </div>
     </div>
 
+    <div class="modal" id="history-modal" style="display: none;">
+        <div class="modal-content history-content">
+            <h3>SHOT HISTORY</h3>
+            <div id="history-list" class="history-scroll-area">
+                <!-- History items injected here -->
+            </div>
+            <button class="close-btn" id="btnCloseHistory">CLOSE</button>
+        </div>
+    </div>
+
     <script src="physics.js"></script>
     <script src="app.js"></script>
 </body>
