refacto putt and reset

--- a/index.html
+++ b/index.html
@@ -196,19 +196,19 @@
                 </div>
             </div>
             <div id="putt-footer" class="footer-segment" style="display: none;">
-                <div class="putt-footer-container">
-                    <div class="target-control">
-                        <span class="target-label">TARGET</span>
+                <div class="putt-dashboard-horizontal">
+                    <button class="footer-btn reset-btn-circle" id="btnResetPutt" title="Reset">↺</button>
+
+                    <div class="target-control-center">
+                        <span class="target-label-mini">TARGET DISTANCE</span>
                         <div class="distance-adjust-group">
                             <button class="adjust-btn-small" id="btn-dist-minus">-</button>
                             <span class="target-value" id="label-putt-dist">5,00m</span>
                             <button class="adjust-btn-small" id="btn-dist-plus">+</button>
                         </div>
                     </div>
-                    <div class="putt-actions-bottom">
-                        <button class="footer-btn reset-btn" id="btnResetPutt">↺ RESET</button>
-                        <button class="footer-btn action-btn-putt" id="btnPutt">▶ PUTT</button>
-                    </div>
+
+                    <button class="footer-btn action-btn-putt-rect" id="btnPutt">PUTT</button>
                 </div>
             </div>
         </footer>
