refacto club selection

--- a/index.html
+++ b/index.html
@@ -95,11 +95,6 @@
 
             <!-- SWING OVERLAYS -->
             <div id="swing-content">
-                <!-- CLUB SELECTION SIDEBAR (Vertical Left) -->
-                <div class="club-belt-sidebar">
-                    <div class="club-belt-vertical" id="club-belt"></div>
-                </div>
-
                 <div class="hud bottom-left" id="hud-swing-left">
                     <span class="hud-title">SPEED</span>
                     <div class="hud-item"><span class="hud-label">CLUB</span><span class="hud-value"
@@ -209,6 +204,10 @@
                         </div>
                         <button class="action-btn-punchy-compact" id="btnSwing">SWING</button>
                     </div>
+                </div>
+
+                <div class="club-belt-container">
+                    <div class="club-belt" id="club-belt"></div>
                 </div>
             </div>
             <div id="putt-footer" class="footer-segment" style="display: none;">
