feat: complete Three.js infrastructure for putting mode with procedural textures and WASM bridge

--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
 
     <!-- App Entry Point -->
     <script src="app.js?v=3"></script>
+
+    <!-- Three.js Import Map (v0.160.0) -->
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
+            "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/"
+        }
+    }
+    </script>
+    <script type="module" src="js/putting_view_3d.js"></script>
 </body>
 
 </html>
