feat: Add `ui_manager.js` to centralize UI, state, and canvas rendering, and introduce a 'MÉMO' button to the main layout.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                     <span id="alt-temp-hud">0m · 20°C</span>
                 </div>
             </div>
+            <button id="btn-memo-trigger" class="memo-fab">
+                <span>MÉMO</span>
+            </button>
         </main>
 
         <!-- ZONE 3: FOOTER CONTROLS -->
