--- a/src/html/chip_ui.html
+++ b/src/html/chip_ui.html
@@ -1,4 +1,5 @@
 <div class="metric-container" id="chip-metrics-header">
+    <!-- Line 1: Distances -->
     <div class="metric-group">
         <div class="metric-item">
             <span class="label">CARRY</span>
@@ -13,6 +14,7 @@
             <div class="value-group"><span id="chip-val-total">--</span><span class="unit">M</span></div>
         </div>
     </div>
+    <!-- Line 2: Technical Data -->
     <div class="metric-group">
         <div class="metric-item">
             <span class="label">APEX</span>
@@ -22,8 +24,6 @@
             <span class="label">RATIO</span>
             <div class="value-group"><span id="chip-val-ratio">--</span><span class="unit">%</span></div>
         </div>
-    </div>
-    <div class="metric-group">
         <div class="metric-item">
             <span class="label">DYN LOFT</span>
             <div class="value-group"><span id="chip-val-loft">--</span><span class="unit">°</span></div>
